--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 
 .App {
   text-align: center;
-  font-family: Montserrat, sans-serif;
-  color: #100f0f;
-  font-size: 16px;
+  font-family:cursive;
+  color: white;
+  font-size: 20px;
   line-height: 28px;
   font-weight: 400;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background: linear-gradient(45deg, rgb(93, 91, 91), black);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -19,20 +15,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -45,6 +27,20 @@
 
 /* custom  */
 
+h2{
+font-family: cursive;
+
+}
+.icon{
+  color: white;
+  align-items: left;
+  margin-right: 7px;
+  height: 3vh
+}
+p{
+ word-break: keep-all;
+}
+
 h1{
   margin-top: 20px;
   margin-bottom: 15px;
@@ -52,11 +48,256 @@ h1{
   line-height: 62px;
   font-weight: 400;
 }
-.about-me {
+h3{
   text-align: center;
+}
+
+.site-header{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+height: 10vh;
+background-color: black;
+background: linear-gradient(45deg, rgb(93, 91, 91), black) ;
+}
+.navigation a{
+  text-align: end;
+  color: orange;
+  font-size: 1.5em;
+  text-decoration: none;
+  padding: 14px 16px;
+  
+}
+.navigation a:hover{
+  background-color: white;
+}
+
+.contact-nav{
+  margin: 10px;
+}
+.my-project-nav{
+  margin: 10px;
+}
+.about-me-nav{
+  margin: 10px;
+}
+
+#resume{
+ position: absolute;
+ margin-left: 0;
+ align-self: flex-start;
 
 }
 
-.navigation {
+.resume-link{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  padding: 5px 20px;
+  text-align: left;
+  color:black;
+  background-color:orange;
+  font-size: 1.5em;
+  border-radius: 10px;
+  border: 2px solid black;
+  margin-bottom: 0;
+  box-shadow: 0 5px grey;
+}
+.resume-link:hover{background-color: blanchedalmond;
+  cursor: pointer;
+}
+
+.resume-link:active{
+  background-color:blanchedalmond;
+  box-shadow: 0 5px rgb(25, 25, 25);
+  transform:translateY(5px);
+}
+
+.about-me {
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.about-me-container{
+  width: 60vw;
+  align-items: center;
+  text-align: justify;
+  margin-left: 0%;
+}
+
+.about-me-image{
+flex-basis: 40%;
+margin-top: 5%;
+}
+
+img {
+  height: 40vh;
+  max-width: 100%
+}
+
+/* .about-me-animation{
+  position:absolute;
+  margin:0%
+} */
+.about-me-special {
+    display: flex;
+    align-items: center;
+    justify-content: center
+  }
+
+.about-me-special2 {
+  padding-left: 20px;
+}
+
+.about-me-special3{
+  text-align: left;
+}
+
+/* .projects{
+  height: 190px;
+  padding: 35px 15px 5px;
+  width:60vw; margin:0 auto;
+} */
+
+.projects:before, .projects:after{
+content: "";
+display: table;
+}
+
+.projects div{
+  float: left;
+  width: 180px;
+  height: 160px;
+}
+
+.project-p{
+font-size: 20px;
+}
+
+.project-text{
+  padding-top: 20px;
+}
+
+.projectimage{
+  flex-basis: 40%
+}
+
+#project-1{
+ 
+  margin-right: 30px;
+  margin-left: 30px;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height:auto;
+  
+}
+
+#project-2{
+  margin-right: 30px;
+  margin-left: 30px;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height:auto;
+ 
+}
+
+#project-3{
+  margin-right: 30px;
+  margin-left: 30px;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height:auto;
+  
 
 }
+#project-4{
+  background-color: #0000;
+  margin-right: 30px;
+  margin-left: 30px;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height:auto;
+}
+
+.project-1-animation{float: left;
+  
+}
+
+#contact{
+  margin-top: 100px;
+  margin-bottom: 10%;
+  align-self: center;
+  
+
+}
+.contact-me{
+
+  margin-bottom: 30%;
+  
+  
+}
+
+fieldset{ background-color: orange; border: 5px solid grey
+  ; border-radius: 20px; margin-bottom: 10px; width: 500px;
+margin: auto;
+}
+
+fieldset input{text-align: center;
+
+}
+legend{ 
+  background-color: rgb(59, 44, 29); 
+  border-radius: 10px; 
+  color:white;
+  border: 2px solid grey; 
+  width: 100px;
+  }
+
+legend span{
+  display: block;
+}
+
+#submit-btn {
+  padding: 5px 20px;
+  text-align: center;
+  color: white;
+  background-color:rgb(59, 44, 29);
+  font-size: 1em;
+  border-radius: 10px;
+  border: 2px solid black;
+  margin-bottom: 0;
+  box-shadow: 0 5px grey;
+}
+
+#submit-btn :hover{background-color: blanchedalmond;
+  cursor: pointer;
+
+}#submit-btn:active{
+  background-color:blanchedalmond;
+  box-shadow: 0 5px rgb(25, 25, 25);
+  transform:translateY(5px);
+}
+
+.site-footer{
+margin-top: auto;
+
+}
+.navigation-footer a{
+  text-align: end;
+  color: white;
+  font-size: 1.5em;
+  text-decoration: none;
+  padding: 14px 16px;
+}
+
+.icon-footer{
+  color: white;
+  align-items: left;
+  margin-right: 7px;
+  height: 3vh
+}
+
