--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-
 .App {
-  text-align: center;
   font-family:cursive;
   color: white;
   font-size: 20px;
@@ -37,9 +35,7 @@ font-family: cursive;
   margin-right: 7px;
   height: 3vh
 }
-p{
- word-break: keep-all;
-}
+
 
 h1{
   margin-top: 20px;
@@ -48,6 +44,7 @@ h1{
   line-height: 62px;
   font-weight: 400;
 }
+
 h3{
   text-align: center;
 }
@@ -60,6 +57,7 @@ height: 10vh;
 background-color: black;
 background: linear-gradient(45deg, rgb(93, 91, 91), black) ;
 }
+
 .navigation a{
   text-align: end;
   color: orange;
@@ -68,6 +66,7 @@ background: linear-gradient(45deg, rgb(93, 91, 91), black) ;
   padding: 14px 16px;
   
 }
+
 .navigation a:hover{
   background-color: white;
 }
@@ -92,12 +91,12 @@ background: linear-gradient(45deg, rgb(93, 91, 91), black) ;
 .resume-link{
   position: absolute;
   left: 10px;
-  top: 10px;
+  top: 8px;
   padding: 5px 20px;
   text-align: left;
   color:black;
   background-color:orange;
-  font-size: 1.5em;
+  font-size: 1em;
   border-radius: 10px;
   border: 2px solid black;
   margin-bottom: 0;
@@ -135,10 +134,6 @@ img {
   max-width: 100%
 }
 
-/* .about-me-animation{
-  position:absolute;
-  margin:0%
-} */
 .about-me-special {
     display: flex;
     align-items: center;
@@ -153,25 +148,14 @@ img {
   text-align: left;
 }
 
-/* .projects{
-  height: 190px;
-  padding: 35px 15px 5px;
-  width:60vw; margin:0 auto;
-} */
-
-.projects:before, .projects:after{
-content: "";
-display: table;
-}
-
-.projects div{
-  float: left;
-  width: 180px;
-  height: 160px;
+.projects {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-evenly;
 }
 
 .project-p{
-font-size: 20px;
+font-size: 15px;
 }
 
 .project-text{
@@ -183,14 +167,9 @@ font-size: 20px;
 }
 
 #project-1{
- 
-  margin-right: 30px;
-  margin-left: 30px;
-  align-items: center;
-  justify-content: center;
-  width: 40%;
-  height:auto;
-  
+  align-self: center;
+  height: 20rem;
+  width: 20rem;
 }
 
 #project-2{
@@ -198,9 +177,9 @@ font-size: 20px;
   margin-left: 30px;
   align-items: center;
   justify-content: center;
-  width: 40%;
-  height:auto;
- 
+  height: 20rem;
+  width: 20rem;
+  
 }
 
 #project-3{
@@ -208,8 +187,8 @@ font-size: 20px;
   margin-left: 30px;
   align-items: center;
   justify-content: center;
-  width: 40%;
-  height:auto;
+  height: 20rem;
+  width: 20rem;
   
 
 }
@@ -231,23 +210,32 @@ font-size: 20px;
   margin-top: 100px;
   margin-bottom: 10%;
   align-self: center;
+  align-items: flex-start;
   
 
 }
 .contact-me{
 
   margin-bottom: 30%;
+  text-align: center;
   
   
 }
 
 fieldset{ background-color: orange; border: 5px solid grey
-  ; border-radius: 20px; margin-bottom: 10px; width: 500px;
-margin: auto;
+  ; border-radius: 20px; margin-bottom: 5px; width: 400px;
+margin: auto; height: 200px;
 }
 
-fieldset input{text-align: center;
+fieldset input{text-align: left;
 
+}
+
+textarea[type = text] {
+  width: 100%; height: max-content;
+  padding: 10px 15px;
+  margin: 5px 0;
+  box-sizing: border-box;
 }
 legend{ 
   background-color: rgb(59, 44, 29); 
@@ -261,7 +249,7 @@ legend span{
   display: block;
 }
 
-#submit-btn {
+.submit-btn {
   padding: 5px 20px;
   text-align: center;
   color: white;
@@ -273,17 +261,19 @@ legend span{
   box-shadow: 0 5px grey;
 }
 
-#submit-btn :hover{background-color: blanchedalmond;
+.submit-btn :hover{background-color: blanchedalmond;
   cursor: pointer;
 
-}#submit-btn:active{
+}.submit-btn:active{
   background-color:blanchedalmond;
   box-shadow: 0 5px rgb(25, 25, 25);
   transform:translateY(5px);
 }
 
 .site-footer{
-margin-top: auto;
+margin-top: 10px;
+text-align: center;
+
 
 }
 .navigation-footer a{
@@ -298,6 +288,16 @@ margin-top: auto;
   color: white;
   align-items: left;
   margin-right: 7px;
-  height: 3vh
+  height: 3vh;
 }
+
+.links{
+  color: white;
+}
+
+
+
+
+
+
 
